[package]
name = "studyrust"
version = "0.1.0"
authors = ["chry <a8512413@163.com>"]
edition = "2018"

[[bin]]
name = "01hello_world"
path = "src/01hello_world.rs"

[[bin]]
name = "02variable_const"
path = "src/02variable_const.rs"

[[bin]]
name = "03data_type"
path = "src/03data_type.rs"

[[bin]]
name = "04function"
path = "src/04function.rs"

[[bin]]
name = "05control_flow"
path = "src/05control_flow.rs"

[[bin]]
name = "06ownership"
path = "src/06ownership.rs"

[[bin]]
name = "07references"
path = "src/07references.rs"

[[bin]]
name = "08slice"
path = "src/08slice.rs"

[[bin]]
name = "09struct"
path = "src/09struct.rs"

[[bin]]
name = "10impl"
path = "src/10impl.rs"

[[bin]]
name = "11enum"
path = "src/11enum.rs"

[[bin]]
name = "12match_if-let"
path = "src/12match_if-let.rs"

[[bin]]
name = "13vector"
path = "src/13vector.rs"

[[bin]]
name = "14string"
path = "src/14string.rs"

[[bin]]
name = "15hash_map"
path = "src/15hash_map.rs"

[[bin]]
name = "16panic"
path = "src/16panic.rs"

[[bin]]
name = "17result"
path = "src/17result.rs"

[[bin]]
name = "18generics"
path = "src/18generics.rs"

[[bin]]
name = "19trait"
path = "src/19trait.rs"

[[bin]]
name = "20lifetime"
path = "src/20lifetime.rs"

[[bin]]
name = "21closures"
path = "src/21closures.rs"

[[bin]]
name = "22iterator"
path = "src/22iterator.rs"

[[bin]]
name = "23box_list"
path = "src/23box_list.rs"

[[bin]]
name = "24deref"
path = "src/24deref.rs"

[[bin]]
name = "25drop"
path = "src/25drop.rs"

[[bin]]
name = "26reference_counting"
path = "src/26reference_counting.rs"

[[bin]]
name = "27refcell"
path = "src/27refcell.rs"

[[bin]]
name = "28cycle_reference"
path = "src/28cycle_reference.rs"

[[bin]]
name = "29weak_reference"
path = "src/29weak_reference.rs"

[[bin]]
name = "30thread_spawn"
path = "src/30thread_spawn.rs"

[[bin]]
name = "31thread_comm"
path = "src/31thread_comm.rs"

[[bin]]
name = "32thread_mutex"
path = "src/32thread_mutex.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
